--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,14 @@ h4 {
     opacity: 0.5;
 }
 
+header {
+    background: #000000;
+}
+
+header nav {
+    border-bottom: 1px rgba(255, 255, 255, 0.199) solid
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -188,17 +196,13 @@ nav {
     padding: 35px 0;
 }
 
-header {
-    background: #000000;
-}
-
-nav ul {
+.logoAndMenu {
     display: flex;
     align-items: center;
     gap: 32px;
 }
 
-.logoAndMenu {
+nav ul {
     display: flex;
     align-items: center;
     gap: 32px;
@@ -244,23 +248,6 @@ nav ul li:hover a::after {
     gap: 24px;
     max-width: 400px;
     width: 100%;
-}
-
-header .text-div {
-    position: absolute;
-    top: 40%;
-    transform: translate(0,-40%);
-}
-
-header div span{
-    font-family: 'Manrope', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 19px;
-    letter-spacing: 10px;
-    color: #FFFFFF;
-    mix-blend-mode: normal;
-    opacity: 0.5;
 }
 
 #hideMenu {
@@ -309,7 +296,7 @@ header div span{
     .container {
         max-width: 1440px;
         width: 100%;
-        padding: 0 36px;
+        padding: 0 40px;
         margin: auto;
     }
     .background-image {
@@ -320,18 +307,21 @@ header div span{
     
 }
 
-.background-image {
-    display: flex;
-    align-items: center;
+.background {
+    width: 100%;
     background: #141414;
-    justify-content: center;
 }
 
-.background-image img {
-    width: 580px;
+.new-product {
+    height: 80vh;
+    background: url(../img/background-img.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: right;
+    display: flex;    
 }
 
-.background-image span {
+.new-product span {
     font-family: 'Manrope', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -342,17 +332,15 @@ header div span{
     opacity: 0.5;
 }
 
-@media(max-width:1220px) {
-    .background-image {
-        justify-content: flex-end;
-    }
+.new-product .text-div {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    justify-content: center;
 }
 
-@media(max-width: 600px) {
-    .background-image img {
-        width: 100%;
-    }
-}
+
+
 /* BUY DIVS */
 
 .buy-divs {
@@ -572,6 +560,10 @@ footer .text-div{
     }
     .manPicture-wide {
         width: 100%;
+    }
+    .new-product .text-div{
+        text-align: center;
+        align-items: center;
     }
 }
 
