--- a/css/style.css
+++ b/css/style.css
@@ -1245,16 +1245,15 @@ form input[type="radio"] {
 
 .ordered {
     width: 100%;
-    display: flex;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px;
 }
 
 .grandTotal {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    width: 198px;
-    height: 140px;
     background-color: #000000;
     border-radius: 0 10px 10px 0;
     padding: 41px 0 41px 32px;
