--- a/css/style.css
+++ b/css/style.css
@@ -1226,6 +1226,18 @@ form input[type="radio"] {
     top: -100%;
     left: 50%;
     transform: translate(-50%,-25%);
+    background: transparent;
+    border-radius: 8px;
+    padding: 0 24px;
+    max-width: 540px;
+    width: 100%;
+
+    display: flex;
+    z-index: 10;
+    transition: 0.2s all ease-in-out;
+}
+
+.popUp-in {
     background: #FFFFFF;
     border-radius: 8px;
     padding: 48px;
@@ -1235,18 +1247,51 @@ form input[type="radio"] {
     display: flex;
     flex-direction: column;
     gap: 28px;
-    z-index: 10;
-    transition: 0.2s all ease-in-out;
 }
 
 #popUp a button{
     width: 100%;
 }
 
+#boughtItems {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+/* #boughtItems::after {
+    content: '';
+    display: block;
+    width: 100%;
+    background: #000000;
+    mix-blend-mode: normal;
+    opacity: 0.15;
+    height: 2px;
+    margin: 12px 0;
+} */
+
+#itemsStore {
+    border: transparent;
+    width: 100%;
+    background: transparent;
+    font-family: 'Manrope';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: -0.214286px;
+
+    color: #000000;
+
+    mix-blend-mode: normal;
+    opacity: 0.5;
+    margin: 12px 0;
+}
+
 .ordered {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.5fr 1fr;
     gap: 12px;
 }
 
@@ -1268,4 +1313,14 @@ form input[type="radio"] {
     width: 0;
     height: 0;
     z-index: 2;
+}
+
+@media(max-width:560px) {
+    .ordered {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
+    .grandTotal {
+        border-radius: 0 0 10px 10px;
+    }
 }
