--- a/css/style.css
+++ b/css/style.css
@@ -882,14 +882,14 @@ footer .text-div{
     
 }
 
-.product-details a {
-    position: absolute;
-    top: 0;
-    left: 0;
+#goBack {
     transition: 0.4s all ease-in-out;
+    margin-top: 80px;
+    border: transparent;
+    background: transparent;
 }
 
-.product-details a:hover {
+#goBack:hover {
     transform: scale(1.1)
 }
 
@@ -1100,9 +1100,9 @@ footer .text-div{
 
 form {
     display: grid;
-    grid-template-columns: 2fr 1fr ;
+    grid-template-columns: 2fr 1fr;
     gap: 40px;
-    margin: 160px 0;
+    margin: 80px 0 160px 0;
 }
 
 form label {
@@ -1219,7 +1219,7 @@ form input[type="radio"] {
 #paymentItemsList {
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 12px
 }
 
 .spended-money {
